--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,12 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Creepster', cursive;
 }
 
-a {
-  color: #00B7FF;
+h1 {
+  font-family: 'Creepster', cursive;
+}
+
+img{
+  width:100vw;
+  height: 50vh;
 }
